# marmot

./: .clang-format  .cursorrules  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt  pyproject.toml
.ai/: AUDIT_PROMPT.md  DEVELOPMENT.md
.github/: copilot-instructions.md
Formula/: libmarmot.rb  marmot-lm.rb
apps/marmot-lm/: Cargo.toml  build.rs
apps/marmot-lm/docs/: .gitignore  LM_STUDIO_COMPATIBILITY_GUIDE.md
apps/marmot-lm/src/: main.rs
apps/marmot-lm/src/cli/: info.rs  list.rs  mod.rs  ps.rs  pull.rs  rm.rs  run.rs  serve.rs  stop.rs  unload.rs
apps/marmot-lm/src/client/: channels.rs  mod.rs  rpc.rs  signals.rs  transport.rs
apps/marmot-lm/src/client/api/: llm.rs  mod.rs  system.rs
apps/marmot-lm/src/common/: mod.rs
apps/marmot-lm/src/config/: mod.rs  models.rs
apps/marmot-lm/src/embedded/: mod.rs  runtime.rs
apps/marmot-lm/src/engine/: mod.rs  model_manager.rs
apps/marmot-lm/src/ffi/: bindings.rs  layout_test.rs  mod.rs  safe_wrappers.rs
apps/marmot-lm/src/protocol/: messages.rs  mod.rs  types.rs
apps/marmot-lm/src/server/: mod.rs  model_utils.rs  namespace.rs  signals.rs  websocket.rs
apps/marmot-lm/src/server/channels/: llm.rs  mod.rs  stubs.rs  util.rs
apps/marmot-lm/src/server/rpc/: files.rs  format.rs  llm.rs  mod.rs  plugins.rs  repository.rs  runtime.rs  system.rs  types.rs
apps/marmot-lm/src/template/: context.rs  engine.rs  fallback.rs  filters.rs  mod.rs  source.rs  stop_strings.rs
apps/marmot-lm/src/template/templates/: chatml.jinja  default.jinja  gemma.jinja  llama3.jinja  mistral.jinja  phi3.jinja
apps/marmot-lm/tests/: e2e_test.sh
docs/: API_OPS.gen.md  BYTECODE_DISPATCH.md  DEVELOPER_ADOPTION_STRATEGY.md  INFERENCE_QUALITY_GUIDE.md  INFERENCE_VALIDATION_PLAN.md  METAL_PERFORMANCE_OPTIMIZATION.md  README.md
docs/getting-started/: BENCHMARKING.md  INSTALL.md  OPS_UTILS.md  QUICK_START.md
docs/graph/: API.md  ARCHITECTURE.md  DEBUGGING.md  ENVIRONMENT.md  FUSION.md  GGUF.md  README.md  SIGNATURES.md
docs/kernels/: ARCHITECTURE.md  CODEGEN.md  COST_MODEL.md  COVERAGE.md  DEBUGGING.md  DISPATCH.md  DSL.md  OPS.md  README.md
docs/tutorials/: ADD_KERNEL.md  SIMPLE_GRAPH.md
examples/: llama_generate.c
include/marmot/: allocator.h  calibration.h  config.h  device.h  device_caps.h  dispatch.h  error.h  error_capture.h  inference.h  macros.h  marmot.h  matmul_types.h  op_metadata.gen.h  ops.h  ops_types.h  ops_utils.h  quant_block.h  quant_traits.h  stride_utils.h  tensor.h  tokenizer.h  traits_ids.gen.h  types.h
scripts/: benchmark_llm_matrix.py  build-debug.sh  build-release.sh  build.sh  compare_moe_cpu.py  embed_binary.py  format-check.sh  format.sh  generate_golden_embeddings.py  install.sh  make_moe_fixture.py  package-release.sh  test.sh
scripts/codegen/: backend_config.py  codegen_base.py  def_parser.py  gen_api_dispatch.py  gen_dispatch_args.py  gen_kernels.py  gen_ops_schema.py  ops_schema.py  ops_schema_gen.py  validate_def.py
src/api/: error_capture.c  gguf_loader.cpp  graph_api.cpp  inference_handles.hpp  inference_model_api.cpp  kv_pool_api.cpp  llm_api.cpp  serving_engine_api.cpp  tokenizer_api.cpp
src/core/: error.c  ops_utils.c
src/graph/: binding_table.cpp  binding_table.hpp  execution_session.cpp  execution_session.hpp  fast_exec.cpp  fast_exec.hpp  fast_executor.cpp  fast_executor.hpp  fast_plan.cpp  fast_plan.hpp  graph.cpp  graph_api_impl.cpp  graph_api_impl.hpp  graph_executor.cpp  graph_executor.hpp  graph_handle.hpp  graph_impl.hpp  graph_naming.cpp  graph_naming.hpp  graph_node.hpp  graph_signature.cpp  graph_signature.hpp  graph_validator.cpp  graph_validator.hpp  graph_value.hpp  kernel_dispatch_args.gen.h  kernel_query.cpp  kernel_query.hpp  tensor_alloc.hpp
src/tokenizer/: model_bpe.cpp  model_bpe.hpp  model_unigram.cpp  model_unigram.hpp  model_wordpiece.cpp  model_wordpiece.hpp  tokenizer.cpp  tokenizer.hpp  utf8.cpp  utf8.hpp  vocab.cpp  vocab.hpp
src/utils/: dtype_ref.c  dtype_ref.h
tests/: test_dtype_helpers.h  test_fixture_utils.h
tests/backend/: golden_data.h  golden_float_ops_llama.h  golden_matmul_llama.h  golden_quant_llama.h  golden_unary_numpy.h  golden_vec_dot_llama.h  matmul_quantized_golden_cases.h  quant_decode_helpers.h  test_backend_activations.c  test_backend_conversions.c  test_backend_elementwise.c  test_backend_embedding.c  test_backend_embedding_golden.c  test_backend_embedding_perf.c  test_backend_matmul.c  test_backend_memory.c  test_backend_moe.c  test_backend_normalization.c  test_backend_paged_attention.c  test_backend_paged_attention_perf.c  test_backend_quantization.c  test_backend_reduction.c  test_backend_softmax.c  test_backend_tensor_ops.c  test_backend_utils.h  test_matmul_quantized.c  test_metal_compat.c  test_metal_quant_optimized.c  test_rope.c  test_vec_dot.c
tests/codegen/: test_benchmark_llm_matrix.py  test_codegen_ids.py  test_compare_moe_cpu.py  test_def_parser_errors.py  test_make_moe_fixture.py
tests/core/: test_allocator_registry.c  test_bitpack_utils.c  test_bytecode_exec_cpu.c  test_bytecode_execute.c  test_bytecode_tables.c  test_context_threads.c  test_int4_utils.c  test_op_signature_hash.c  test_ops_utils.c  test_quant_registry.c  test_rope_freq_cache.c  test_tensor_metadata.c
tests/golden/: .gitignore  README.md  embedding_q5_0.txt  (+8 more)
tools/: meson.build
tools/marmot-bench/: bench_core.c  bench_core.h  bench_grid.c  bench_grid.h  bench_llm.c  bench_llm.h  bench_llm_direct.cpp  bench_model.c  bench_model.h  bench_output.h  bench_output_console.c  bench_output_csv.c  bench_output_json.c  bench_output_jsonl.c  bench_output_markdown.c  bench_output_sql.c  bench_param_sweep.c  bench_param_sweep.h  bench_stats.c  bench_stats.h  bench_workloads.c  bench_workloads.h  main.c  meson.build
tools/marmot-bench/workloads/: composite_ffn.c  composite_layer.c  composite_moe.c  micro_elementwise.c  micro_fusion.c  micro_logits_projection.c  micro_matmul.c  micro_matmul_quant.c  micro_matmul_quant_tile.c  micro_moe_expert.c  micro_reduction.c  micro_rope.c  micro_tokenizer.c
website/: index.html
(+449 files in other folders)
